--- a/views/sucesso.njk
+++ b/views/sucesso.njk
@@ -86,10 +86,10 @@
         <p>QR Code:</p>
         <img src="{{ qrCode }}" alt="QR Code">
 
-        <p class="linkUnico">Compartilhe e para cada inscrito no vestibulinho ganhe pontos <a href="https://etecfy.onrender.com/divulgar/{{ linkUnico }}">etecfy.onrender.com/divulgar/{{ linkUnico }}</a></p>
+        <p class="linkUnico">Compartilhe e para cada inscrito no vestibulinho ganhe pontos <a href="https://vestibulinhoetec.onrender.com/divulgar/{{ linkUnico }}">vestibulinhoetec.onrender.com/divulgar/{{ linkUnico }}</a></p>
 
         <!-- AddToAny BEGIN -->
-        <div class="a2a_kit a2a_kit_size_32 a2a_default_style" data-a2a-url="etecfy.onrender.com/divulgar/{{ linkUnico }}">
+        <div class="a2a_kit a2a_kit_size_32 a2a_default_style" data-a2a-url="vestibulinhoetec.onrender.com/divulgar/{{ linkUnico }}">
         <a class="a2a_dd" href="https://www.addtoany.com/share"></a>
         <a class="a2a_button_whatsapp"></a>
         <a class="a2a_button_facebook"></a>
