--- a/views/sucesso.njk
+++ b/views/sucesso.njk
@@ -86,7 +86,7 @@
         <p>QR Code:</p>
         <img src="{{ qrCode }}" alt="QR Code">
 
-        <p class="linkUnico">Compartilhe e para cada inscrito no vestibulinho ganhe pontos <a href="https://vestibulinhoetec.onrender.com/divulgar/{{ linkUnico }}">vestibulinhoetec.onrender.com/divulgar/{{ linkUnico }}</a></p>
+        <p class="linkUnico">Compartilhe e para cada inscrito no vestibulinho ganhe pontos <a target="_blank" href="https://vestibulinhoetec.onrender.com/divulgar/{{ linkUnico }}">vestibulinhoetec.onrender.com/divulgar/{{ linkUnico }}</a></p>
 
         <!-- AddToAny BEGIN -->
         <div class="a2a_kit a2a_kit_size_32 a2a_default_style" data-a2a-url="vestibulinhoetec.onrender.com/divulgar/{{ linkUnico }}">
