--- a/views/formulario.html
+++ b/views/formulario.html
@@ -137,9 +137,9 @@
 <body>
     <div class="container">
         <div>
-            <h1>Mais de 60 pessoas estão divulgando 
+            <h1>Mais de 10 pessoas estão divulgando 
             <br/>o Vestibulinho Etec.</h1>
-            <p>Junte-se a milhares de vestibulandos e e concorra a mimos limitados</p>
+            <p>Divulgue e concorra a Prêmios!</p>
         </div>
         
         <form action="/cadastro" method="POST">
